[gd_scene load_steps=5 format=3 uid="uid://sl7st5a83aia"]

[ext_resource type="Texture2D" uid="uid://ckt2kape3y2i1" path="res://icon.svg" id="1_offgj"]
[ext_resource type="Script" path="res://mob/mob.gd" id="1_s0rcs"]
[ext_resource type="Texture2D" uid="uid://qarv1c23ks2t" path="res://mob/B_Shrumal_Warrior.webp" id="3_jqn1p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fhfhf"]
size = Vector2(130, 119)

[node name="MOB" type="Area2D"]
script = ExtResource("1_s0rcs")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-9, -11)

[node name="blueColision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-66, -60.5)
shape = SubResource("RectangleShape2D_fhfhf")

[node name="HonguitoColision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-66, -60.5)
shape = SubResource("RectangleShape2D_fhfhf")

[node name="HonguitoSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-66, -69.5172)
scale = Vector2(0.42, 0.369349)
texture = ExtResource("3_jqn1p")

[node name="blueSpreite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-66, -60.5)
scale = Vector2(1.01563, 0.945312)
texture = ExtResource("1_offgj")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
